--- a/css/style.css
+++ b/css/style.css
@@ -147,7 +147,7 @@ section.main-content .form-control {
 }
 
 section.main-content .form-control:focus {
-    border-color: #FF0000;
+    border-color: #0ca678; /* Switch to teal */
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.2);
 }
 
