--- a/css/style.css
+++ b/css/style.css
@@ -126,11 +126,11 @@ section.main-content .input-group {
 }
 
 section.main-content .btn-danger {
-    background-color: #0ca678; /* Switch to teal */
+    background-color: #0ca678; /* Switch to Teal */
     min-width: 69px;
     font-size: 23px;
     padding: 0;
-    border-color: #0ca678; /* Switch to teal */
+    border-color: #0ca678; /* Switch to Teal */
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
 }
@@ -138,7 +138,7 @@ section.main-content .btn-danger {
 section.main-content .btn-danger:hover {
     background-color: #464646;
     border-color: #464646;
-    color: #0ca678; /* Switch to teal */
+    color: #0ca678; /* Switch to Teal */
 }
 
 section.main-content .form-control {
