--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/customized.css" />
     <link rel="stylesheet" type="text/css" href="css/jquery.classycountdown.min.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -56,16 +56,9 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h3>{{ site.data.messages.locales[site.locale].Learn_More }}</h3>
-                    <!-- not supported in Jekyll:
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Email">
-                        <span class="input-group-btn">
-                            <button class="btn btn-danger" type="button"><i class="fa fa-check"></i></button>
-                        </span>
-                    </div> -->
+                    <!--- <h3>{{ site.data.messages.locales[site.locale].Learn_More }}</h3> -->
                     <br> 
-                    <ul class="list-unstyled list-inline">
+                     <ul class="list-unstyled list-inline">
                         {% if site.owner.email %}<li>
                             <a href="mailto:{{ site.owner.email }}"><i class="fa fa-envelope"></i></a>
                         </li>{% endif %}
@@ -81,7 +74,7 @@
                         {% if site.owner.instagram %}<li>
                             <a href="http://instagram.com/{{ site.owner.instagram }}"><i class="fa fa-instagram"></i></a>
                         </li>{% endif %}                
-                    </ul>
+                     </ul>
                 </div>
             </div>
         </div>
@@ -92,12 +85,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <p>2015 - {{ site.owner.name }}</p>
-
+                    <p>2017 - {{ site.title }}</p>
+                    <!--- Amazing template by M. Aghili & Ilya B
                     <P> {% if site.owner.aboutlink.url %}<a href="{{ site.owner.aboutlink.url }}">{{ site.owner.aboutlink.caption | default: "About" }}</a> | {% endif %}
-                        Page and Design by <a target="_blank" href="http://mortezaaghili.github.io/">M. Aghili</a> + 
+                        Design by <a target="_blank" href="http://mortezaaghili.github.io/">M. Aghili</a> + 
                         <a target="_blank" href="https://www.behance.net/gallery/18421675/Free-Bootstrap-Psd-Coming-Soon-Template">Ilya B.</a>
                     </P>
+                    -->
                 </div>
             </div>
         </div>
