--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,6 +20,8 @@
     <script src="js/jquery.classycountdown.min.js"></script>
     <script src="js/jquery.knob.js"></script>
     <script src="js/jquery.throttle.js"></script>
+    <!-- Favicons with Device icons -->
+    <link rel="shortcut icon" href="https://ddraffft.in/favicons/favicon.ico" type="image/x-icon">
 
 </head>
 
