--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
     <script src="js/jquery.knob.js"></script>
     <script src="js/jquery.throttle.js"></script>
     <!-- Favicons with Device icons -->
-    <link rel="shortcut icon" href="https://ddraffft.in/favicons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://blog.ddraffft.in/favicons/favicon.ico" type="image/x-icon">
 
 </head>
 
