--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,7 @@ header p {
 
 .ss-style-doublediagonal {
     z-index: 1;
+    overflow: hidden;
     padding-top: 2em;
     background: white;
 }
@@ -179,6 +180,7 @@ section.footer p a {
 
 .footer {
     z-index: 1;
+    overflow: hidden;
     margin-top: 10%;
     padding-top: 5px;
     background: #343a40; /* Change to Blue to Gray */
